<resources>
    <string name="app_name">Exercise Menu</string>
    <string name="labelapp">LOGIN USER</string>
    <string name="un">Username</string>
    <string name="input_username">Masukan Username</string>
    <string name="ps">Password</string>
    <string name="input_pass">Masukan Password</string>
    <string name="btn">SIGN-IN</string>
    <string name="labelMenu">Menu Hitung Bangun Datar</string>
    <string name="persegi">Menghitung Persegi</string>
    <string name="lingkaran">Menghitung Lingkaran</string>
    <string name="persegiP">Menghitung Persegi Panjang</string>
    <string name="segi3">Menghitung Segitiga</string>
    <string name="trapesium">Menghitung Trapesium</string>

    <string-array name="persegi">
        <item>Menghitung Persegi</item>
        <item>Hitung Luas</item>
        <item>Hitung Keliling</item>
    </string-array>

    <string-array name="lingkaran">
        <item>Menghitung Lingkaran</item>
        <item>Hitung Luas</item>
        <item>Hitung Keliling</item>
    </string-array>

    <string-array name="persegiP">
        <item>Menghitung Persegi Panjang</item>
        <item>Hitung Luas</item>
        <item>Hitung Keliling</item>
    </string-array>

    <string-array name="segitiga">
        <item>Menghitung Segitiga</item>
        <item>Hitung Luas</item>
        <item>Hitung Keliling</item>
    </string-array>

    <string-array name="trapesium">
        <item>Menghitung Trapesium</item>
        <item>Hitung Luas</item>
        <item>Hitung Keliling</item>
    </string-array>
</resources>
