<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/labelMenu"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:gravity="top"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textPersegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persegi"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textPersegi"
            android:entries="@array/daftar_hitung"
            android:layout_toRightOf="@+id/textPersegi" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textLingkaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lingkaran"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/daftar_hitung"
            android:layout_alignBottom="@+id/textLingkaran"
            android:layout_toRightOf="@+id/textLingkaran" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textPersegiPanjang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persegiP"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/daftar_hitung"
            android:layout_alignBottom="@+id/textPersegiPanjang"
            android:layout_toRightOf="@+id/textPersegiPanjang" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textSegitiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segi3"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/daftar_hitung"
            android:layout_alignBottom="@+id/textSegitiga"
            android:layout_toRightOf="@+id/textSegitiga" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textTrapesium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trapesium"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/daftar_hitung"
            android:layout_alignBottom="@id/textTrapesium"
            android:layout_toRightOf="@+id/textTrapesium" />

        </RelativeLayout>

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>